k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: dotnet-app
  ports:
    - port: 80
      targetPort: 80
